# python_ai_talk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-acr.yml
app/: main.py
app/api/: routes.py
app/clinic/: __init__.py
app/config/: settings.py
app/feeding/: __init__.py
app/graphs/: clinic_graph.py  (+2 more)
docs/: coding-standard.md  deploy-guide.md  vector_db_guide.md
frontend/: index.html  package.json  vite.config.js
openspec/: project.md
scripts/: add_history_filter_path.py  build_vector_db.py  check_analyze_intent.py  check_client_content.py  check_flutter_clinic_ws.py  check_intent_event.py  create_go_clinic_feedback_controller.py  create_go_clinic_feedback_http.py  debug_go_file.py  fix_go_controller_struct.py  fix_go_filter_api.py  fix_go_filter_imports.py  fix_go_internal_references.py  modify_go_filter_api.py  patch_flutter_clinic_feedback.py  patch_flutter_pangbao_screen.py  patch_go_client.py  patch_go_client_export.py  patch_go_client_v2.py  patch_go_clinic_llm.py  patch_go_clinic_service.py  read_flutter_clinic_body.py  read_flutter_clinic_ws.py  read_flutter_pangbao_screen.py  read_flutter_pangbao_screen2.py  read_flutter_pangbao_screen3.py  read_flutter_pangbao_screen4.py  read_flutter_pangbao_screen5.py  read_flutter_pangbao_screen6.py  restore_analyze_intent_fields.py  restore_analyze_intent_fields_v2.py  rewrite_go_controller.py
tests/: test_api.py  test_intent.py  test_vector_store.py
(+183 files in other folders)
