[tool.poetry]
name = "python-ai-talk"
version = "0.1.0"
description = "母婴喂养场景的自然语言意图识别服务"
authors = ["trae"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "<2.0"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
httpx = "^0.27.2"
langgraph = "^0.2.0"
langchain-openai = "^0.2.1"
chromadb = "^0.4.24"
sentence-transformers = "^3.0.1"
cachetools = "^5.5.0"
pydantic-settings = "^2.5.2"
redis = "^5.2.0"
python-dotenv = "^1.0.1"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.23.6"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E501"]